<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY domain "18.218.51.47"><!ENTITY port "9090">]>

<resources>
    <string name="app_name">Wave</string>
    <string name="sign_in_title">Going to places with Wave</string>
    <string name="sign_in_subtitle">We make it simple for you to go to places and to perform your daily tasks seamlessly.</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="new_here">New here?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="placeholder_image">https://www.woodfordoil.com/wp-content/uploads/2018/02/placeholder.jpg</string>
    <string name="termsAndConditions">By joining Wave, you agree to the <font color='#00A651'> General Terms of Use and Privacy Policy</font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="domain_raw">&domain;</string>
    <string name="domain">http://&domain;/api/v1</string>

    <string name="website">https://www.wavenow.co</string>
    <string name="website_desc">Subscribe at our landing page to\nbe notified on new services.</string>

    <array name="schools">
        <item>Nanyang Technological University</item>
    </array>
</resources>
