<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wave.identity.Activities.SignInActivity">
    <LinearLayout
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/signInImageView"
            android:layout_marginTop="16dp"
            tools:src="@drawable/smartphone_two"
            android:layout_width="256dp"
            android:layout_height="258dp" />

        <TextView
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/sign_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/sign_in_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/signInEmailAddressEditText"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:fontFamily="@font/helvetica_bold"
                android:textColor="@android:color/black"
                android:hint="@string/email_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/signInPasswordEditText"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:fontFamily="@font/helvetica_bold"
                android:textColor="@android:color/black"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:text="Sign in with your student email."
            android:textColor="@color/colorTextLight"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textSize="14sp"
            android:text="(If this is your first time using the app, your password is your student matric, change it on the profile page upon sign in)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/signInButton"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/sign_in"
            android:background="@drawable/rounded_button_accent"
            android:layout_marginTop="24dp"
            android:alpha="0.70"
            android:fontFamily="@font/helvetica_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorTextDark"
                android:fontFamily="@font/helvetica_bold"
                android:textSize="14sp"
                android:gravity="end"
                android:text="New here?"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/signInSignUpTextView"
                android:fontFamily="@font/helvetica_bold"
                android:textSize="16sp"
                android:layout_marginStart="2dp"
                android:textColor="@color/colorAccent"
                android:text="Sign Up"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>